Edited typos and cut irrelevant boring info

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 			<div class="col-sm-8 col-lg-7">
 				<h2>About Me</h2>
 
-				<p>Hello! My name is Rebecca, and I live in Cambridge. I'm both a staff member and degree candidate at the Harvard Extension School. I am pursing the ALM-IT degree with a major in Digital Media Arts and Instructional Design. I am particularly interested in web development, so I am pretty excited about this course! I spend the vast majority of my free time on the Internet, so it'd be awesome if I could make cool stuff for the Internet and my fellow nerds.</p>
+				<p>Hello! My name is Rebecca, and I live in Cambridge. I'm both a staff member and degree candidate at the Harvard Extension School. I am pursuing the ALM-IT degree with a major in Digital Media Arts and Instructional Design. I am particularly interested in web development, so I am pretty excited about this course! I spend the vast majority of my free time online, and it'd be awesome if I could make cool stuff for the interwebz.</p>
 
-				<p>Previously, I have studied Java with Dr. Leitner and some C and PHP with Dr. Malan here at the Extension School. As a teenager, I learned some HTML for fun and used to run my own blog back when Greymatter was a thing people used. I dropped that hobby for several years, but now that I'm back at it, I still really enjoy myself when I'm building a website. More recently, I've refreshed/updated my HTML and CSS skills in a couple of courses with Jen Kramer here at the Extension School. Those courses also taught Bootstrap and a touch of JavaScript.</p>
+				<p>Previously, I have studied Java with Dr. Leitner and some C and PHP with Dr. Malan here at the Extension School. As a teenager, I learned some HTML for fun and used to run my own blog back when Greymatter was a thing people used. I dropped that hobby for several years, but now that I'm back at it, I still really enjoy myself when I'm building a website. More recently, I've refreshed/updated my HTML and CSS skills in a couple of courses with Jen Kramer. Those courses also featured Bootstrap and a touch of JavaScript.</p>
 
-				<p>I have no professional experience programming. I earned my BA in linguistics at Boston University. I find programming to be pretty absorbing and rewarding. Still, I often feel like <em>AAHH WHAT AM I DOING I'M A FRAUD!!</em> when coding. I think it's called Impostor Syndrome.</p>
+				<p>I have no professional experience programming. I find programming to be pretty absorbing and rewarding. Still, I often feel like <em>AAHH WHAT AM I DOING I'M A FRAUD!!</em> when coding. I think it's called Impostor Syndrome.</p>
 
 				<p>Oh, one last thing: I'm on a PC!</p>
 			</div>
