--- a/index.html
+++ b/index.html
@@ -7,30 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <style type="text/css">
-    	body {
-    		background-color: #FABBB0;
-    	}
-    	h1 {
-    		text-align: center;
-    	}
-    	.panel {
-    		border: 1px dotted #aaa;
-    		text-align: right;
-    	}  	
-    	ul {
-    		list-style: none;
-    		font-weight: bold;
-    	}
-
-    	a {
-    		color: #859857;
-    	}
-    	a:hover {
-    		color: #7F756E;
-    		text-decoration: none;
-    	}
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
