played with layout, changed project placeholder links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<div class="main">
 		<div class="row">
-			<div class="col-sm-4 col-lg-5 left">
+			<div class="col-sm-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<img src="img/me.jpg" alt="me standing in front of Kent falls in Connecticut" class="img-responsive img-rounded">
@@ -29,15 +29,15 @@
 					<div class="panel-body">
 						<h4>Project Links</h4>
 						<ul class="list-group">
-							<li>P2: <a href="http://p2.beckrecca.me" target="_blank">Live</a> & <a href="https://github.com/beckrecca/p2" target="_blank">Github</a></li>
-							<li>P3: <a href="http://p3.beckrecca.me" target="_blank">Live</a> & <a href="https://github.com/beckrecca/p3" target="_blank">Github</a></li>
-							<li>P4: <a href="http://p4.beckrecca.me" target="_blank">Live</a> & <a href="https://github.com/beckrecca/p4" target="_blank">Github</a></li>
+							<li>P2: <a href="http://p2.beckrecca.me" target="_blank">Live</a> & <a href="#" target="_blank">Github</a></li>
+							<li>P3: <a href="http://p3.beckrecca.me" target="_blank">Live</a> & <a href="#" target="_blank">Github</a></li>
+							<li>P4: <a href="http://p4.beckrecca.me" target="_blank">Live</a> & <a href="#" target="_blank">Github</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			
-			<div class="col-sm-8 col-lg-7">
+			<div class="col-sm-8">
 				<h2>About Me</h2>
 
 				<p>Hello! My name is Rebecca, and I live in Cambridge. I'm both a staff member and degree candidate at the Harvard Extension School. I am pursuing the ALM-IT degree with a major in Digital Media Arts and Instructional Design. I am particularly interested in web development, so I am pretty excited about this course! I spend the vast majority of my free time online, and it'd be awesome if I could make cool stuff for the interwebz.</p>
