Added current p2 link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<div class="panel-body">
 						<h4>Project Links</h4>
 						<ul class="list-group">
-							<li>P2: <a href="http://p2.beckrecca.me" target="_blank">Live</a> & <a href="#" target="_blank">Github</a></li>
+							<li>P2: <a href="http://p2.beckrecca.me" target="_blank">Live</a> & <a href="https://github.com/beckrecca/p2" target="_blank">Github</a></li>
 							<li>P3: <a href="http://p3.beckrecca.me" target="_blank">Live</a> & <a href="#" target="_blank">Github</a></li>
 							<li>P4: <a href="http://p4.beckrecca.me" target="_blank">Live</a> & <a href="#" target="_blank">Github</a></li>
 						</ul>
