--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<h4>Project Links</h4>
 						<ul class="list-group">
 							<li>P2: <a href="http://p2.beckrecca.me" target="_blank">Live</a> & <a href="https://github.com/beckrecca/p2" target="_blank">Github</a></li>
-							<li>P3: <a href="#" target="_blank">Live</a> & <a href="#" target="_blank">Github</a></li>
+							<li>P3: <a href="http://p3.beckrecca.me" target="_blank">Live</a> & <a href="http://github.com/beckrecca/p3" target="_blank">Github</a></li>
 							<li>P4: <a href="#" target="_blank">Live</a> & <a href="#" target="_blank">Github</a></li>
 						</ul>
 					</div>
